[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://scripts/demos/character_revelation_demo.gd" id="1"]

[node name="CharacterRevelationDemo" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -400.0
offset_top = -400.0
offset_right = 400.0
offset_bottom = 400.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 15

[node name="TitleLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "CHARACTER REVELATION SYSTEM DEMO"
horizontal_alignment = 1

[node name="SystemLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Tests: Voluntary revelation, forced revelation, queueing"
horizontal_alignment = 1

[node name="TestButtons" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="RevealPlayer1Button" type="Button" parent="VBoxContainer/TestButtons"]
custom_minimum_size = Vector2(600, 50)
layout_mode = 2
size_flags_horizontal = 4
text = "Reveal Player 1 (Franklin - Voluntary)"

[node name="RevealPlayer2Button" type="Button" parent="VBoxContainer/TestButtons"]
custom_minimum_size = Vector2(600, 50)
layout_mode = 2
size_flags_horizontal = 4
text = "Reveal Player 2 (Vampire - Voluntary)"

[node name="ForceRevealPlayer3Button" type="Button" parent="VBoxContainer/TestButtons"]
custom_minimum_size = Vector2(600, 50)
layout_mode = 2
size_flags_horizontal = 4
text = "Force Reveal Player 3 (Emi - Death simulation)"

[node name="RevealAllButton" type="Button" parent="VBoxContainer/TestButtons"]
custom_minimum_size = Vector2(600, 50)
layout_mode = 2
size_flags_horizontal = 4
text = "Reveal All Hidden (Test queue)"

[node name="StatusLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Player States:
(Will update after revelations)"

[node name="BackButton" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
size_flags_horizontal = 4
text = "Back to Menu"
